[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/PlayScene/PlayScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/BackGround.png" type="Texture" id=2]
[ext_resource path="res://Assets/Grid.png" type="Texture" id=3]
[ext_resource path="res://Scenes/PlayScene/Indicator.gd" type="Script" id=4]
[ext_resource path="res://Assets/Player2_Indicator_ON.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player2_Indicator_OFF.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player1_Indicator_ON.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player1_Indicator_OFF.png" type="Texture" id=8]
[ext_resource path="res://Assets/MenuButtonNormal.png" type="Texture" id=9]
[ext_resource path="res://Assets/MenuButtonPressed.png" type="Texture" id=10]
[ext_resource path="res://Assets/MenuButtonHover.png" type="Texture" id=11]
[ext_resource path="res://Assets/WinIndicator.png" type="Texture" id=12]
[ext_resource path="res://Assets/BackGroundFade.png" type="Texture" id=13]
[ext_resource path="res://Assets/press_space_to_play_again.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player1_Won.png" type="Texture" id=15]
[ext_resource path="res://Assets/Draw.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player2_Won.png" type="Texture" id=17]
[ext_resource path="res://Assets/Game_Over_Sprite.png" type="Texture" id=18]
[ext_resource path="res://Assets/sounds_fx/c chords piano.ogg" type="AudioStream" id=19]
[ext_resource path="res://Assets/sounds_fx/player_1_sound.ogg" type="AudioStream" id=20]
[ext_resource path="res://Assets/sounds_fx/player_2_sound.ogg" type="AudioStream" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 90, 100 )

[sub_resource type="Animation" id=2]
resource_name = "Blick_Text_Play_Again"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayAgainText:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.117647 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.117647 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("FadeGroundSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.839216 ) ]
}

[node name="PlayScene" type="Node2D"]
script = ExtResource( 1 )

[node name="BackGroundSprite" type="Sprite" parent="."]
position = Vector2( 840, 525 )
texture = ExtResource( 2 )

[node name="GridSprite" type="Sprite" parent="."]
position = Vector2( 840, 450 )
texture = ExtResource( 3 )

[node name="Indicator" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Player2_On" type="Sprite" parent="Indicator"]
position = Vector2( 1420, 170 )
texture = ExtResource( 5 )

[node name="Player2_Off" type="Sprite" parent="Indicator"]
position = Vector2( 1420, 170 )
texture = ExtResource( 6 )

[node name="Player1_On" type="Sprite" parent="Indicator"]
position = Vector2( 240, 170 )
texture = ExtResource( 7 )

[node name="Player1_Off" type="Sprite" parent="Indicator"]
visible = false
position = Vector2( 240, 170 )
texture = ExtResource( 8 )

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 60.0
margin_top = 880.0
margin_right = 321.0
margin_bottom = 947.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="GridHolder" type="Node" parent="."]

[node name="G1" type="Area2D" parent="GridHolder"]
position = Vector2( 610, 210 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridHolder/G1"]
shape = SubResource( 1 )

[node name="G2" type="Area2D" parent="GridHolder"]
position = Vector2( 840, 210 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridHolder/G2"]
shape = SubResource( 1 )

[node name="G3" type="Area2D" parent="GridHolder"]
position = Vector2( 1060, 210 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridHolder/G3"]
shape = SubResource( 1 )

[node name="G4" type="Area2D" parent="GridHolder"]
position = Vector2( 610, 450 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridHolder/G4"]
shape = SubResource( 1 )

[node name="G5" type="Area2D" parent="GridHolder"]
position = Vector2( 840, 450 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridHolder/G5"]
shape = SubResource( 1 )

[node name="G6" type="Area2D" parent="GridHolder"]
position = Vector2( 1060, 450 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridHolder/G6"]
shape = SubResource( 1 )

[node name="G7" type="Area2D" parent="GridHolder"]
position = Vector2( 610, 690 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridHolder/G7"]
shape = SubResource( 1 )

[node name="G8" type="Area2D" parent="GridHolder"]
position = Vector2( 840, 690 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridHolder/G8"]
shape = SubResource( 1 )

[node name="G9" type="Area2D" parent="GridHolder"]
position = Vector2( 1060, 690 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GridHolder/G9"]
shape = SubResource( 1 )

[node name="PatternXO" type="Node" parent="."]

[node name="WinIndicator" type="Sprite" parent="."]
visible = false
position = Vector2( 840, 450 )
z_index = 1
texture = ExtResource( 12 )

[node name="GameOverOverlay" type="Node2D" parent="."]
z_index = 2

[node name="FadeGroundSprite" type="Sprite" parent="GameOverOverlay"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 840, 525 )
z_index = -1
texture = ExtResource( 13 )

[node name="PlayAgainText" type="Sprite" parent="GameOverOverlay"]
visible = false
position = Vector2( 850, 760 )
texture = ExtResource( 14 )

[node name="Player1Won" type="Sprite" parent="GameOverOverlay"]
visible = false
position = Vector2( 855, 500 )
texture = ExtResource( 15 )

[node name="DrawText" type="Sprite" parent="GameOverOverlay"]
visible = false
position = Vector2( 820, 480 )
texture = ExtResource( 16 )

[node name="Player2Won" type="Sprite" parent="GameOverOverlay"]
visible = false
position = Vector2( 855, 500 )
texture = ExtResource( 17 )

[node name="GameOverText" type="Sprite" parent="GameOverOverlay"]
visible = false
position = Vector2( 840, 220 )
texture = ExtResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOverOverlay"]
anims/Blick_Text_Play_Again = SubResource( 2 )
anims/Fade_In = SubResource( 3 )

[node name="sounds" type="Node" parent="."]

[node name="game_over_fx" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 19 )

[node name="player_1_fx" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 20 )

[node name="player_2_fx" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 21 )
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="mouse_entered" from="GridHolder/G1" to="." method="_on_G1_mouse_entered"]
[connection signal="mouse_exited" from="GridHolder/G1" to="." method="_on_G1_mouse_exited"]
[connection signal="mouse_entered" from="GridHolder/G2" to="." method="_on_G2_mouse_entered"]
[connection signal="mouse_exited" from="GridHolder/G2" to="." method="_on_G2_mouse_exited"]
[connection signal="mouse_entered" from="GridHolder/G3" to="." method="_on_G3_mouse_entered"]
[connection signal="mouse_exited" from="GridHolder/G3" to="." method="_on_G3_mouse_exited"]
[connection signal="mouse_entered" from="GridHolder/G4" to="." method="_on_G4_mouse_entered"]
[connection signal="mouse_exited" from="GridHolder/G4" to="." method="_on_G4_mouse_exited"]
[connection signal="mouse_entered" from="GridHolder/G5" to="." method="_on_G5_mouse_entered"]
[connection signal="mouse_exited" from="GridHolder/G5" to="." method="_on_G5_mouse_exited"]
[connection signal="mouse_entered" from="GridHolder/G6" to="." method="_on_G6_mouse_entered"]
[connection signal="mouse_exited" from="GridHolder/G6" to="." method="_on_G6_mouse_exited"]
[connection signal="mouse_entered" from="GridHolder/G7" to="." method="_on_G7_mouse_entered"]
[connection signal="mouse_exited" from="GridHolder/G7" to="." method="_on_G7_mouse_exited"]
[connection signal="mouse_entered" from="GridHolder/G8" to="." method="_on_G8_mouse_entered"]
[connection signal="mouse_exited" from="GridHolder/G8" to="." method="_on_G8_mouse_exited"]
[connection signal="mouse_entered" from="GridHolder/G9" to="." method="_on_G9_mouse_entered"]
[connection signal="mouse_exited" from="GridHolder/G9" to="." method="_on_G9_mouse_exited"]
[connection signal="animation_finished" from="GameOverOverlay/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
